# ether

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build-ci.sh  build.sh  version.asm
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
bios/: boot.asm
config/: boot.config
diskimg/: CMakeLists.txt
diskimg/include/: Disk.h
diskimg/src/: Disk.cpp  main.cpp
docs/: Doxyfile.in  ebfs.md
efi/: efi.asm
ether/: entry.asm  ether.asm  link.ld  main.asm  multiboot.asm
ether/cpu/: gdt.asm  sse.asm
ether/lib/: string.asm
ether/memory/: pmm.asm
ether/video/: vgatext.asm
loader/: bootinfo.asm  config.asm  loader.asm  loader32.asm
loader/apic/: pic.asm
loader/cpu/: idt.asm
loader/disk/: atapio.asm
loader/fs/: ebfs.asm  elf.asm
loader/lib/: string.asm
loader/memory/: mm.asm
loader/rm/: a20.asm  gdt.asm  memory.asm
loader/video/: vgatext.asm
mbr/: main.asm
util/: CMakeLists.txt
util/diskimg/: CMakeLists.txt
util/diskimg/src/: main.cpp
util/partlib/: CMakeLists.txt
util/partlib/include/partlib/: EBFS.hpp  GPT.hpp  GUID.hpp  Image.hpp
util/partlib/src/: EBFS.cpp  GUID.cpp  Image.cpp
utils/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
utils/cmake/: Clang.cmake  CodeCoverage.cmake  Cppcheck.cmake  TestDocs.cmake
utils/diskimg/: CMakeLists.txt
utils/diskimg/src/: main.cpp
utils/docs/: Doxyfile.in
utils/tests/: CMakeLists.txt
